--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 						<div class="hero__wrapper">
 							<div class="row">
 								<div class="col-lg-10 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
-									<div class="hero__title_inner"><span class="">hoichoi opensource</span>
-										<h1 class="hero__title">why opensource</h1>
-										<p class="hero__text">Open Source enables us to bring choice, technology and experience to our customers.</p>
+									<div class="hero__title_inner"><span class="">opensource @ hoichoi</span>
+										<h1 class="hero__title">Creating better technology with open source</h1>
+										<p class="hero__text">Open Source enables us to bring choice, technology and experience to our customers.We are committed to open source and we both leverages & provide open source technology focused on media and entertainment </p>
 									</div>
 								</div>
 							</div>
@@ -79,7 +79,7 @@
 								<!-- service -->
 								<div class="service">
 									<h2 class="service__title">Ask for Sponsorship</h2>
-									<p class="service__text">We give back to the community by sponsoring projects that help us.</p>
+									<p class="service__text">We always give back to the community by sponsoring projects/events.</p>
 								</div><!-- End / service -->
 								
 								
