--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					
 					<!-- header -->
 					<div class="header">
-						<div class="header__left"><span>opensource.hoichoi.tech</span><span>hoichoi.tech</span><span>join.hoichoi.tech</span>
+						<div class="header__left"><span>opensource.hoichoi.tech</span><span href="https://hoichoi.tech">hoichoi.tech</span><span href="https://join.hoichoi.tech">join.hoichoi.tech</span>
 						</div>
 						<div class="header__social">
 							
